# rust-windows-shell

./: Cargo.toml  README.md  extension.def
extension/: contextmenu.rs  lib.rs  registry.rs  strings.rs
