[package]
name = "rust-windows-shell"
version = "0.1.0"
edition = "2021"

[lib]
name = "extension"
path = "extension/lib.rs"
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Foundation",
    "implement",
    "Win32_UI_Shell_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Ole",
    "Win32_System_Com_StructuredStorage"
] }
